# cxadc-linux

./: .gitignore  INSTALL.md  Makefile  README.md  Tips-&-Notes.md  cxadc.c  dkms.conf
.github/: copilot-instructions.md
.github/plans/: README.md
.github/workflows/: build.yml  clockgen-firmware.yml  deploy.yml
clockgen/: .gitignore  BUILD.md  CHANGELOG.md  README.md
clockgen/firmware/: CMakeLists.txt
clockgen/firmware/patches/: 0001-rp2040-usb-no-panic-on-iso-close-race.patch
clockgen/firmware/src/: CMakeLists.txt  adc_power.c  adc_power.h  clock_gen.c  clock_gen.h  console.c  console.h  fifo.c  fifo.h  global_status.h  main0.c  main1.c  main1.h  pcm1802.c  pcm1802.h  tusb_config.h  usb_audio.c  usb_audio.h  usb_audio_format.h  usb_descriptors.c  usb_descriptors.h  wdt_trace.c  wdt_trace.h
clockgen/firmware/src/libsi5351/: si5351.c  si5351.h
clockgen/scripts/: README.md  capture-test.sh  capture-vhs.sh  collect-info.sh  imhex-debug-pattern.hexpat  source-common.sh  source-pi.sh  wm-alias-first-validation.md
clockgen/scripts/ci/: ci-build.sh  ci-install-packages.sh  ci-package.sh
config/: cxadc.rules
src/kernel/: cxadc.c
src/scripts/: README.md  cx10fsc  cx16bit  cx6off  cx6on  cx8bit  cx8fsc  cxfreq  cxlevel  cxlvlcavdd  cxresolve  cxvalues  cxvx0  cxvx1  cxvx2  deploy_dkms_install.sh
src/tools/common/: cx_analyze.c  cx_analyze.h  cx_clockgen.c  cx_clockgen.h  utils.c  utils.h
src/tools/cx-capture/: cx-capture.c
src/tools/cxadc-status/: cxadc-status
src/tools/leveladj/: leveladj.c
src/tools/levelmon/: levelmon.c
